gitops/generated/toolbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolbox
  namespace: toolbox

spec:
  replicas: 1

  selector:
    matchLabels:
      app: toolbox

  template:
    metadata:
      labels:
        app: toolbox

    spec:
      containers:
      - name: toolbox
        image: kobotoolbox/kpi:latest
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          tcpSocket:
            port: 8000

          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          tcpSocket:
            port: 8000

          initialDelaySeconds: 30
          periodSeconds: 20
