gitops/generated/toolbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toolbox
  namespace: toolbox

spec:
  selector:
    app: toolbox

  ports:
  - name: http
    port: 8000
    targetPort: 8000

  type: ClusterIP
